@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Added a PickleableSequence class to serialize Python objects on HDF5
+
   [Graeme Weatherill]
   * Fixes Z1.0 units bug in Abrahamson, Silva and Kamai (2014)
 
